# stormm

./: CMakeLists.txt  ChangeAllSuchWords.sh  LICENSE  README.md  license.txt  stormm.doxy
apps/Conf/: CMakeLists.txt
apps/Conf/src/: analysis.cpp  analysis.h  conformer.cpp  setup.cpp  setup.h
apps/Conf/test/: AminoAcidTest.sh
apps/Dyna/: CMakeLists.txt
apps/Dyna/src/: setup.cpp  setup.h  simulator.cpp
apps/Dyna/test/: AminoAcidTest.sh
benchmark/: CMakeLists.txt
benchmark/Coordinates/Dipeptides/: GLY_ff14SB.inpcrd  GLY_ff19SB.inpcrd  LYS_ff14SB.inpcrd  LYS_ff19SB.inpcrd  MET_ff14SB.inpcrd  MET_ff19SB.inpcrd  TRP_ff14SB.inpcrd  TRP_ff19SB.inpcrd
benchmark/Coordinates/Tetrapeptides/: ARG_MET_ARG_ff19SB.inpcrd  ASN_ARG_ASP_ff14SB.inpcrd  ASP_PHE_GLN_ff19SB.inpcrd  CYS_ASN_GLY_ff14SB.inpcrd  GLN_PRO_HIE_ff19SB.inpcrd  GLU_ASP_LEU_ff14SB.inpcrd  GLY_SER_MET_ff19SB.inpcrd  HID_CYS_PRO_ff14SB.inpcrd  HIE_THR_THR_ff19SB.inpcrd  ILE_GLN_TYR_ff14SB.inpcrd  LEU_TYR_ALA_ff19SB.inpcrd  LYS_GLY_ASN_ff14SB.inpcrd  MET_VAL_CYS_ff19SB.inpcrd  PHE_HID_GLU_ff14SB.inpcrd  SER_ALA_HID_ff19SB.inpcrd  SER_HIE_ILE_ff14SB.inpcrd  TRP_ARG_LYS_ff19SB.inpcrd  TRP_ILE_PHE_ff14SB.inpcrd  VAL_ASN_SER_ff19SB.inpcrd  VAL_LEU_TRP_ff14SB.inpcrd
benchmark/Coordinates/Tripeptides/: ARG_LEU_ff19SB.inpcrd  ASP_PRO_ff14SB.inpcrd  GLN_GLU_ff19SB.inpcrd  GLY_ILE_ff14SB.inpcrd  HIE_ARG_ff19SB.inpcrd  LEU_GLN_ff14SB.inpcrd  LYS_THR_ff19SB.inpcrd  PRO_ALA_ff14SB.inpcrd  SER_LYS_ff19SB.inpcrd  TRP_SER_ff14SB.inpcrd  VAL_GLY_ff19SB.inpcrd
benchmark/DirectSpace/: erfc_tables.cpp  hail_examination.cpp  pair_interactions.cpp
benchmark/ForceAccumulation/: accumulate.cu  valence.cpp
benchmark/KernelTesting/: test_nonperiodic_kernels.cu  test_periodic_kernels.cu
benchmark/ReciprocalSpace/: charge_mapping.cpp  fft_throughput.cu
benchmark/Topologies/Dipeptides/: GLY_ff14SB.top  GLY_ff19SB.top  LYS_ff14SB.top  LYS_ff19SB.top  MET_ff14SB.top  MET_ff19SB.top  TRP_ff14SB.top  TRP_ff19SB.top
benchmark/Topologies/Tetrapeptides/: ARG_MET_ARG_ff19SB.top  ASN_ARG_ASP_ff14SB.top  ASP_PHE_GLN_ff19SB.top  CYS_ASN_GLY_ff14SB.top  GLN_PRO_HIE_ff19SB.top  GLU_ASP_LEU_ff14SB.top  GLY_SER_MET_ff19SB.top  HID_CYS_PRO_ff14SB.top  HIE_THR_THR_ff19SB.top  ILE_GLN_TYR_ff14SB.top  LEU_TYR_ALA_ff19SB.top  LYS_GLY_ASN_ff14SB.top  MET_VAL_CYS_ff19SB.top  PHE_HID_GLU_ff14SB.top  SER_ALA_HID_ff19SB.top  SER_HIE_ILE_ff14SB.top  TRP_ARG_LYS_ff19SB.top  TRP_ILE_PHE_ff14SB.top  (+2 more)
test/: CMakeLists.txt
test/Accelerator/: test_hpc_hybrid.cpp  test_hpc_status.cpp  test_hybrid.cpp
test/Chemistry/: anthracene_like.inpcrd  anthracene_like.top  bond_orders.m  chiral_atoms.m  formal_charges.m  lig1_c8h8.inpcrd  lig1_c8h8.top  lig2_c8h8.inpcrd  lig2_c8h8.top  lig3_1fsj.inpcrd  lig3_1fsj.top  morphine_like.inpcrd  morphine_like.top  pyrene_like.inpcrd  pyrene_like.top  rotating_groups.m  test_atommask.cpp  test_chemical_features.cpp  trpcage_mask_image.m
test/FileManagement/: test_file_management.cpp
test/Math/: matrices.m  randoms.m  test_clustering.cpp  test_hpc_math.cu  test_math.cpp  test_numerics.cpp
test/MolecularMechanics/: mdyn_output.m  min_energy.m  test_dynamics.cpp  test_hpc_dynamics.cu  test_hpc_minimization.cu  test_minimization.cpp
test/MoleculeFormat/: sdf_chemaxon.sdf  sdf_rdkit.sdf  sulfonamide.mol  sulfonamide_rots.sdf  test_molecule_formats.cpp  tethered_atoms.sdf
test/Namelists/: test_namelists.cpp  testrun.in
test/Parsing/: formatted_numbers.txt  output_snapshot.txt  remdynamics.txt  simpsons.txt  something.txt  test_input.cpp  test_output.cpp  test_parse.cpp
test/Potential/: ala_dipeptide_details.m  ala_dipeptide_gb_forces.m  ala_dipeptide_nb_details.m  dhfr_details.m  dhfr_gb_forces.m  dhfr_nb_details.m  potential_decomp.m  test_generalized_born.cpp  test_neighbor_list.cpp  test_nonbonded_evaluation.cpp  test_pme.cpp  test_valence_evaluation.cpp  trpcage_details.m  trpcage_gb_forces.m  trpcage_nb_details.m
test/RDKit/: test_rdkit.cpp
test/Reporting/: test_display.cpp  test_progressbar.cpp
test/Restraints/: rst_output.m  test_restraints.cpp
test/Sampling/: test_enhanced_sampling.cpp
test/Structure/: clash_arg.crd  clash_gly_phe.crd  clash_lys.crd  inverted_coords.m  rotated_coords.m  test_isomerization.cpp  test_local_arrangement.cpp  test_mesh_construction.cpp
test/Synthesis/: assemble_restraints.cpp  assemble_restraints.h  test_atomgraph_synthesis.cpp  test_condensate.cpp  test_hpc_synthesis.cu  test_small_molecules.cpp  test_synthesis.cpp
test/Topology/: ahector.top  ala_charges.m  ala_dipeptide.top  biotin.top  bromobenzene.top  bromobenzene_iso.top  bromobenzene_vs.top  bromobenzene_vs_iso.top  camp_in_water.top  chloride.top  dhfr_cmap.top  dna.top  drug_example.top  drug_example_dry.top  drug_example_iso.top  drug_example_vs.top  drug_example_vs_iso.top  fivek_ions.top  hydrogenate.top  med_1.top  med_2.top  med_3.top  med_4.top  med_5.top  nacl.top  rna.top  sodium.top  stereo_L1.top  stereo_L1_vs.top  sulfonamide.top  symmetry_C1.top  symmetry_C1_in_water.top  symmetry_C2.top  symmetry_C2_in_water.top  symmetry_C3.top  symmetry_C3_in_water.top  symmetry_C4.top  symmetry_C4_in_water.top  symmetry_C5.top  symmetry_C5_in_water.top  (+23 more)
test/Trajectory/: ahector.inpcrd  ala_dipeptide.inpcrd  biotin.inpcrd  bromobenzene.inpcrd  bromobenzene_iso.inpcrd  bromobenzene_vs.inpcrd  bromobenzene_vs_iso.inpcrd  camp_in_water.inpcrd  chloride.inpcrd  dhfr_cmap.inpcrd  dna.inpcrd  drug_example.inpcrd  drug_example_dry.inpcrd  drug_example_iso.inpcrd  drug_example_vs.inpcrd  drug_example_vs_iso.inpcrd  fivek_ions.inpcrd  hydrogenate.inpcrd  jac.inpcrd  kinase.inpcrd  med_1.inpcrd  med_2.inpcrd  med_3.inpcrd  med_4.inpcrd  med_5.inpcrd  nacl.inpcrd  rna.inpcrd  stereo_L1.inpcrd  stereo_L1_vs.inpcrd  stereo_L1x.crd  symmetry_C1.inpcrd  symmetry_C1_in_water.inpcrd  symmetry_C2.inpcrd  symmetry_C2_in_water.inpcrd  symmetry_C3.inpcrd  symmetry_C3_in_water.inpcrd  symmetry_C4.inpcrd  symmetry_C4_in_water.inpcrd  symmetry_C5.inpcrd  symmetry_C5_in_water.inpcrd  (+18 more)
test/UnitTesting/: test_unit_test.cpp
(+701 files in other folders)
